--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1110,7 +1110,7 @@ pre code {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.3);
+  /*background: rgba(0, 0, 0, 0.3);*/
 }
 
 .post-card .post-card-body {
