--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
 	<div class="footer-social">
 		<div class="footer-container clearfix">
 			<div class="social-list">
-				<a class="social github" target="blank" href="{{site.github}}">GitHub</a>
-				<a class="social github" target="blank" href="{{site.jianshu}}">简书</a>
+				<a class="social github" target="https://github.com/tjboise" href="{{site.github}}">GitHub</a>
+<!-- 				<a class="social github" target="blank" href="{{site.jianshu}}">简书</a>
 				<a class="social github" target="blank" href="{{site.juejin}}">掘金</a>
-				<a class="social github" target="blank" href="{{site.csdn}}">Csdn</a>
+				<a class="social github" target="blank" href="{{site.csdn}}">Csdn</a> -->
 			</div>
 		</div>
 	</div>
